# filteriterator_tttask

./: CMakeLists.txt  filteriterator.hpp  filteriterator.rar  filteriterator_SFINAE.hpp  main.cpp  tests.cpp
